fix: increase visibility of failed task states in prompt queue

--- a/packages/client/src/views/project/simple/index.module.scss
+++ b/packages/client/src/views/project/simple/index.module.scss
@@ -89,4 +89,8 @@
     background-color: var(--grey-400);
     color: var(--grey-900);
   }
+
+  &.failed {
+    color: var(--red-900);
+  }
 }
